Refactor: Rename project/package references to Artezan, fix deprecation/JVM warnings, and remove ModelMapper dependency